--- a/src/app/user/profile/profile.component.scss
+++ b/src/app/user/profile/profile.component.scss
@@ -2,22 +2,23 @@
   width: 100%;
   height: fit-content;
   padding-block: 3rem;
+  position: relative;
 }
 
 .container-gt-sm {
   padding: 2rem;
+  position: relative;
 }
 
 .container-xs {
-  padding: 1rem
+  padding: 1rem;
 }
 
 .container-sm {
-  padding: 2rem
+  padding: 2rem;
 }
 
 .toggle-btn {
-
   padding: 12px 30px;
   background-color: #1565c0;
   border: none;
@@ -28,14 +29,11 @@
   border-bottom-right-radius: 50px;
   position: relative;
   right: 34px;
-  bottom: 45px;
 
   &:hover {
     position: relative;
     right: 20px;
   }
-
-
 }
 
 mat-card {
@@ -45,9 +43,8 @@ mat-card {
 .sidenav-container-xs,
 .sidenav-xs {
   background-color: #fff;
-  width: 100%;
+  width: 90%;
   height: 100%;
-
 }
 
 .sidenav-container-xs {
@@ -56,23 +53,26 @@ mat-card {
   left: -100%;
   z-index: 1000;
   padding: 1em;
-  transition: left .6s ease-in-out;
-  -webkit-transition: left .6s ease-in-out;
-  -moz-transition: left .6s ease-in-out;
-  -ms-transition: left .6s ease-in-out;
-  -o-transition: left .6s ease-in-out;
+  transition: left 0.6s ease-in-out;
+  -webkit-transition: left 0.6s ease-in-out;
+  -moz-transition: left 0.6s ease-in-out;
+  -ms-transition: left 0.6s ease-in-out;
+  -o-transition: left 0.6s ease-in-out;
 
   .close-btn {
     float: right;
   }
 }
 
+.active {
+  background-color: #1565c0;
+  color: #fff;
+}
 
 .sidenav-container_show {
   position: absolute;
   left: 0;
 }
-
 
 .sidenav {
   .sidenav-content {
@@ -83,14 +83,15 @@ mat-card {
 .sidenav-container-gt-xs {
   height: fit-content;
   position: sticky;
-  top: 60px;
+  top: 10px;
 
+  button {
+    margin-block: 1px;
+    font-size: 15px;
 
-  .btn {
-    background-color: #1565c0;
-    color: #fff;
-
+    &:hover {
+      background-color: #1565c0;
+      color: #fff;
+    }
   }
-
 }
-
