--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,6 @@ $EventHub-accent: mat.define-palette(mat.$blue-grey-palette, A100, A200, A400);
 
 $EventHub-warn: mat.define-palette(mat.$red-palette, A100, A200, A400);
 
-
-
 $EventHub-theme: mat.define-light-theme(
   (
     color: (
@@ -25,6 +23,7 @@ $EventHub-dark-theme: mat.define-dark-theme(
       primary: $EventHub-primary,
       accent: $EventHub-accent,
       warn: $EventHub-warn,
+
     ),
   )
 );
@@ -33,16 +32,15 @@ $EventHub-dark-theme: mat.define-dark-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-*{
+* {
   box-sizing: border-box;
 }
 
-:root{
-
+:root {
   .container {
     width: 100%;
     height: 100%;
-    padding: 1em;
+    padding-inline: 1rem;
   }
 
   .error {
@@ -50,7 +48,7 @@ $EventHub-dark-theme: mat.define-dark-theme(
     font-weight: 500;
   }
 
-  .backend-error{
+  .backend-error {
     font-weight: 400;
     margin-bottom: 1em;
     text-align: center;
@@ -59,32 +57,40 @@ $EventHub-dark-theme: mat.define-dark-theme(
   mat-card {
     width: 100%;
     max-width: 450px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    padding: 1.5rem;
-  }
-
-
-
-  }
-
-
-html,
-body {
-  height: 100%;
-
+    background-color: #fff;
+    height: fit-content;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    padding: 2rem 1.5rem;
+    animation: myAnim 100ms ease-in-out 100ms 1 reverse both;
+    -webkit-animation: myAnim 100ms ease-in-out 100ms 1 reverse both;
+    //box-shadow: rgba(0, 0, 0, 0.057) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f3f6fd;
+  @keyframes myAnim {
+    0% {
+      opacity: 100;
+    }
 
+    100% {
+      opacity: 0;
+    }
+  }
+
+  html,
+  body {
+    height: 100%;
+  }
+
+  body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #e9edf6;
+    // background-color: #3645a51d;
+    // background-color: #222b5e7b;
+  }
 }
-
-
-
-
