--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
-<header>
-    <div fxLayout="row" fxLayoutGap="5em">
-      <a [routerLink]="['users/login']">login</a>
-      <a [routerLink]="['users/signup']">signup</a>
-      <a [routerLink]="['users/reset-password']">resetPassword</a>
-      <a [routerLink]="['users', 1]" routerLinkActive="router-link-active"
-        >profile</a
-      >
-    </div>
-
-</header>
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<main>
+  <router-outlet></router-outlet>
+</main>
 
 <footer></footer>
