--- a/src/app/user/profile/who-im-follow/who-im-follow.component.html
+++ b/src/app/user/profile/who-im-follow/who-im-follow.component.html
@@ -1,4 +1,5 @@
 <div class="container" fxLayout="column" *ngIf="userData$ | async as data ">
+  <app-loading style="margin-bottom: 2rem;" fxLayoutAlign="center" *ngIf="(isLoadingState$ | async)"></app-loading>
   <mat-card
     class="card mat-elevation-z0"
     *ngFor="let artist of data['artists$'] | async as artists"
