feat(eventIAttend): Add app loading template
This commit adds an app loading template inside the EventIAttend feature template in our Angular app. This will provide a better user experience by displaying a loading indicator while the data is being fetched.

--- a/src/app/user/profile/events-i-attend/events-i-attend.component.html
+++ b/src/app/user/profile/events-i-attend/events-i-attend.component.html
@@ -1,4 +1,5 @@
 <div class="container" *ngIf="userData$ | async as data">
+    <app-loading  fxLayoutAlign="center" *ngIf="(isLoadingData$ | async)"></app-loading>
   <div class="inner-container" *ngFor="let date of data['dates$'] | async">
     <div class="header">{{ date | date : "LLL, YYYY" }}</div>
     <div *ngFor="let event of data['events$'] | async">
