feat(login): Add app loading template
This commit adds an app loading template inside the login template in our Angular app. This will provide a better user experience by displaying a loading indicator while the data is being fetched.

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -3,6 +3,7 @@
 
   <mat-card  class=" mat-elevation-z3" fxFlexAlign="center">
     <mat-card-header fxLayout="column" fxLayoutAlign="start center">
+      <app-loading *ngIf="isLoadingData$ | async"></app-loading>
       <mat-card-title>Sign In</mat-card-title>
     </mat-card-header>
 
@@ -72,7 +73,7 @@
           </button>
 
           <button
-          
+
           type="button"
             mat-flat-button
             [routerLink]="['/users/signup']"
