style: Update container class style by adding max-width: inherit; padding-left: 1rem

--- a/src/app/user/profile/who-im-follow/who-im-follow.component.scss
+++ b/src/app/user/profile/who-im-follow/who-im-follow.component.scss
@@ -1,6 +1,7 @@
 .container {
   // padding-block: 2rem;
-  padding-inline: 0;
+  max-width: inherit;
+  padding-left: 1rem;
   .card,
   .row {
     padding: 1.2rem;
