--- a/src/app/user/profile/events-i-attend/events-i-attend.component.scss
+++ b/src/app/user/profile/events-i-attend/events-i-attend.component.scss
@@ -4,7 +4,6 @@
   -moz-border-radius: 25px;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
-  padding-inline: 0;
 }
 
 .inner-container {
@@ -42,16 +41,17 @@
 
 .event-state {
   padding-inline: 1rem;
-  padding-block: 0.3rem;
+  padding-block: 0.2rem;
   position: absolute;
   top: 0;
-  right: 1rem;
+  right: 0;
   appearance: none;
   border: none;
   background-color: #ff0000;
   opacity: 0.7;
   color: #fff;
   pointer-events: none;
+  border-top-right-radius: 10px;
 }
 
 .date-time {
