--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,29 +1,34 @@
 .app-header {
   width: 100%;
-  height: 20px;
-  padding-block-end: 4rem;
-  padding-block-start: 2.5rem;
+  height: fit-content;
+  padding-block-end: 1rem;
+  padding-block-start: 1rem;
   padding-inline: 2rem;
   min-width: 280px;
-
+  position: fixed;
+  background-color: #e9edf6;
+  z-index: 1000;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
-
 .logo {
+  height: fit-content;
   font-size: 24px;
   font-weight: 900;
   margin-left: 0;
   background-color: #fff;
   color: #1565c0;
-
+  a {
+    all: unset;
+    cursor: pointer;
+  }
   span {
     background-color: #1565c0;
     color: #fff;
   }
 }
 
-.search-wrapper,
-.search-wrapper-xs {
+.search-wrapper {
   width: inherit;
   max-width: inherit;
   height: 20px;
@@ -37,11 +42,14 @@
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
+  margin-inline: 1rem;
   // position: relative;
   // left: 37px;
   padding: 1.5rem;
-  form:last-child
-{
+  form {
+    width: 100%;
+  }
+  form:last-child {
     width: inherit;
     height: inherit;
   }
@@ -54,9 +62,7 @@
     font-weight: 900;
     background-color: #fff;
     border: none;
-
   }
-
 
   .search,
   .search:focus-within {
@@ -68,32 +74,52 @@
     margin-inline: 1em;
   }
 
-
   .mat-icon {
     width: 36px;
   }
-
 }
 
-
-.search-wrapper-xs {
-  width: 100%;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  position: relative;
-  left: 0;
-}
-
-.search-wrapper:focus-within,
-.search-wrapper-xs:focus-within {
+.search-wrapper:focus-within {
   .mat-icon {
     color: #1565c0;
   }
 }
 
-.search-result{
- position: absolute;
- top: 4.5rem;
+.search-result {
+  width: 100%;
+  height: fit-content;
+  max-height: 300px;
+  max-width: 450px;
+  position: absolute;
+  top: 50px;
+  overflow: hidden;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  margin-inline: 1rem;
+  padding: 1.5rem;
+  overflow: scroll;
+    scroll-margin: 20px;
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+
+
+  a {
+    all: unset;
+    display: block;
+    width: 100%;
+    padding-block: .5rem;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.012em;
+    font-weight: 500;
+    border-bottom: 0.3px solid rgba(63, 62, 62, 0.105);
+  }
 }
 
 button {
@@ -103,33 +129,71 @@ button {
   text-align: center;
 }
 
-
-// button:last-child {
-//   margin-right: 1em;
-// }
-
-
-
 .btn {
   // font-size: 16px;
   font-weight: 700;
-  margin-inline: .2em;
+  margin-inline: 0.2em;
+  cursor: pointer;
+}
+
+.search-icon-xs {
+  display: none;
+}
+
+
+.notification{
+  position: fixed;
+  top: 70px;
+  right: 10px;
+  width: 100%;
+  max-width: 300px;
+
+  .default-message{
+    font-size: 12px;
+    font-weight: 700;
+    opacity: .6;
+    text-align: center;
+  }
+
+  .close-btn{
+width: 16px;
+height: 16px;
+position: absolute;
+top: 10px;
+right: 10px;
+display: flex;
+align-items: center;
+justify-content: center;
+    .icon{
+      font-size:14px;
+      font-weight: bolder;
+
+    }
+  }
 
 }
 
-.search-btn{
-  appearance: none;
+
+.close-btn{
+  display: inline-block;
+  padding-inline: 5px;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 900;
+  color: #fff;
+  background: #1565c0;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
 }
-
-
-
 .profile {
   font-size: large;
   box-shadow: 0px 2px 8px -1px rgba(0, 0, 0, 0.2);
-
 }
 
-.mat-icon>button {
+.mat-icon > button {
   text-transform: capitalize;
 }
 
@@ -137,42 +201,90 @@ button {
   padding-inline: 1em;
 }
 
-.search-result-container {
-  position: absolute;
-  z-index: 1000;
-  display: none;
-
-}
-
-
-.search-result_hide {
-  visibility: hidden;
-}
-
-.app-header-right {
-
-  position: relative;
-  top: 0;
-
-}
-
 .app-header {
   &::content {
-    animation: myAnim .5s ease-out 0s 1 reverse both;
-    -webkit-animation: myAnim .5s ease-out 0s 1 reverse both;
+    animation: myAnim 0.5s ease-out 0s 1 reverse both;
+    -webkit-animation: myAnim 0.5s ease-out 0s 1 reverse both;
+  }
 }
-}
-
 
 @keyframes myAnim {
   0% {
     opacity: 100;
-
   }
-
 
   100% {
     opacity: 0;
   }
-
 }
+
+.search-container {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  max-width: 450px;
+  position: relative;
+  left: unset;
+  right: unset;
+  align-self: unset;
+  z-index: unset;
+}
+
+@media (max-width: 599px) {
+  .search-container {
+    display: none;
+    margin: 0 auto;
+    max-width: 100%;
+    background: inherit;
+    position: absolute;
+    left: 0;
+    right: 0;
+    align-self: center;
+    z-index: 1000;
+    padding-inline: 1rem;
+
+    .search-wrapper {
+      margin-inline: 0;
+    }
+
+    .search-result {
+      max-width: inherit;
+      width: inherit;
+      position: absolute;
+      right: 0;
+      left: 0;
+    }
+  }
+  .search-btn-wrapper {
+    width: inherit;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .search-btn-xs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .search-icon-xs {
+    display: block;
+  }
+
+  .block {
+    display: block;
+  }
+
+  .none {
+    display: initial;
+  }
+}
+
+@media (max-width: 800px){
+  .notification{
+    width: 100%;
+    max-width: fit-content;
+    padding-inline: 2rem;
+  }
+}
+
+
