--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="container" fxLayout="column" fxLayoutAlign="stretch center" >
 
+  <h3 style="color: brown;">
+    Please try to clone this repo <a href="https://github.com/Ahmed-Atef-Elnemrawi/dotnetcore-restful-api.git">"https://github.com/Ahmed-Atef-Elnemrawi/dotnetcore-restful-api.git"</a> and run or host it locally to try this project
+  </h3>
 
   <mat-card  class=" mat-elevation-z3" fxFlexAlign="center">
     <mat-card-header fxLayout="column" fxLayoutAlign="start center">
